# NumericalOptimization

./: .gitignore  CMakeLists.txt  README.md  functions.h  line_searches.h  methods.h
examples/benchmark/: CMakeLists.txt  cpp_fullhessian2_1000__.txt  cpp_fullhessian2_100__.txt  cpp_fullhessian2_10__.txt  main.cpp
examples/test/: CMakeLists.txt  main.cpp
functions/: almost_pert_quad.h  arglinb.h  bdqrtic.h  cube.h  diagonal1.h  diagonal4.h  explin1.h  ext_hiebert.h  ext_himmelblau.h  ext_maratos.h  ext_psc1.h  ext_quad_pen_qp1.h  ext_quad_pen_qp2.h  ext_rosenbrock.h  ext_tridiag1.h  ext_tridiag2.h  ext_white_holst.h  fletchcr.h  full_hessian2.h  function.h  gen_psc1.h  gen_rosenbrock.h  gen_white_holst.h  part_pert_quad.h  quartc.h  raydan1.h
line_searches/: approx_wolfe.h  armijo.h  base_line_search.h  binary.h  fixed_step_size.h  goldstein.h  nonmonotone.h  strong_wolfe.h  wolfe.h
methods/: base_method.h
methods/conjugate_gradient/: cg_descent.h  dai_yuan.h  fletcher_reeves.h  hestenes_stiefel.h  polak_ribiere.h
methods/gradient/: barzilai_borwein.h  gradient_descent.h  momentum.h  scalar_correction.h
methods/modified_newton/: goldstein_price.h  levenberg.h  levenberg_marquardt.h
methods/newton/: newton_line_search.h
methods/quasi_newton/: bfgs.h  dfp.h  l_bfgs.h  sr1.h
methods/trust_region/: dogleg.h  doglegSR1.h
